# parse-quote

./: .gitignore  Kospi200.cabal  README.md  package.yaml  parse-quote.cabal  stack.yaml
.stack-work/install/x86_64-linux-nix/lts-7.24/8.0.1/flag-cache/: Cabal-1.24.2.0-DDSbiYfTT3BAkw32hRARMH  HTTP-4000.3.7-Gd4coJOO9rYHugRobumDSZ  Kospi200-0.1.0.0-5f0qVDa4zY8ELyDYUQlvZ5  Kospi200-0.1.0.0-C3CRuD7e65oGmZZDU9J1iX  Kospi200-0.1.0.0-D7yN3zoWxL99SQqIVq4XB7  Kospi200-0.1.0.0-HbCXTMBKnMfBwS3lExfzgt  StateVar-1.1.0.4-1BYn2qKqfIsBkt01xcI3V7  array-0.5.1.1-IxCNlBQUfwq98b5jJiZhlu  async-2.1.1.1-JMSH0FTb925BZBj7SwNxDH  async-2.2.1-8xOkVbYheDs2MfzfdekJkD  async-2.2.1-RxNNyVin6r7N3t5BeOBK3  async-timer-0.2.0.0-2WbWIN72SWi6kL2EW9GEk3  attoparsec-0.13.1.0-4fjnAODeJixHrUYgq6shXf  base-compat-0.9.3-8eBWNd4k9SC6L1Te8dpbEy  base-orphans-0.5.4-5IQvrjd7gNP548VkOOyIq6  base16-bytestring-0.1.1.6-5dPoF8dzhwzBaEB2MvnmIS  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  bifunctors-5.4.2-C3eM1rmkfR40QBD3pyQN4  binary-0.8.3.0-FIQ9uerBALdG9SOGyqrpB8  bytestring-0.10.8.1-B4vBOG7oupx83CkR77fBMi  bytestring-builder-0.10.8.1.0-38nAnf6l4VO1RPckvQ2vCc  cabal-doctest-1.0.2-BXdZ8tYvbATIe21qinfOjB  cabal-install-1.24.0.2  clock-0.7.2-1F3tpzhSilhF4wqwyRWqgE  comonad-5.0.1-C3MWzjxxkqC5s3IGZZNG2C  containers-0.5.7.1-9pvweOXGS7PDSx6jCGkChZ  contravariant-1.4-GzCvX5JmETA1pHkVmwLudv  deepseq-1.4.2.0-Fn5YAvyagXE9AN5ZumY44y  (+51 more)
app/: Main.hs  ParseQuote.hs
src/: Capture.hs  Parser.hs
src/Capture/: Types.hs
src/Parser/: Types.hs
src/Types/: Capture.hs  Parser.hs
test/: Bench.hs  Spec.hs  Test.hs  samplePacket.txt
(+1651 files in other folders)
