name:           Kospi200
version:        0.1.0.0
description:    Code Sample for Tsuru Capital
author:         Sophia Gold
maintainer:     sophiagoldnyc@gmail.com
copyright:      2018 Sophia Gold
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

library
  hs-source-dirs:
      src
  build-depends:
      attoparsec
    , base >=4.7 && <5
    , bytestring
    , containers
    , lens
    , mtl
    , pcap 
    , text
    , time
  exposed-modules:
      Capture
      Capture.Types
      Parser
      Parser.Types
  default-language: Haskell2010

executable Kospi200-exe
  main-is: ParseQuote.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Kospi200
    , attoparsec
    , base >=4.7 && <5
    , bytestring
    , containers
    , lens
    , mtl
    , pcap
    , text
    , time 
  other-modules:
      ParseQuote
      Paths_Kospi200
  default-language: Haskell2010

test-suite Kospi200-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      Paths_Kospi200
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Kospi200
    , attoparsec
    , base >=4.7 && <5
    , bytestring 
    , mtl
    , text
    , time 
  default-language: Haskell2010
